Prevent bold active link causing text to wrap
By adding equivalent letter-spacing we make each link take up approximately the same amount of space when both normal and bold, thus preventing the links from reflowing when they become active.

--- a/app/assets/stylesheets/modules/_page-contents.scss
+++ b/app/assets/stylesheets/modules/_page-contents.scss
@@ -29,6 +29,8 @@
 
   &__list a {
     text-decoration: none;
+    // Prevents emboldening from pushing text onto new lines
+    letter-spacing: 0.022em;
 
     &:hover,
     &:focus,
@@ -38,6 +40,7 @@
   }
   // Styles required by GOVUK.HighlightActiveNavItem JS
   &__list .active {
+    letter-spacing: 0;
     font-weight: bold;
   }
 }
